--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<!doctype html><html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/><link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"/><title>Sterling Website</title><script src="./config.js"></script><script defer="defer" src="/static/js/main.ace24a8b.js"></script><link href="/static/css/main.e4003dc1.css" rel="stylesheet"></head><body><div id="app"></div></body></html>
+<!doctype html><html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer@1.10.1/dist/APlayer.min.css"><script src="https://cdn.jsdelivr.net/npm/aplayer@1.10.1/dist/APlayer.min.js"></script><link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"/><title>Sterling Website</title><script src="./config.js"></script><script defer="defer" src="/static/js/main.ace24a8b.js"></script><link href="/static/css/main.e4003dc1.css" rel="stylesheet"></head><body><div id="aplayer" class="aplayer" data-order="random" data-id="2047115431" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="true" data-volume="0.6"></div><div id="app"></div></body></html>
+<!-- aplayer -->
+<script src="/static/js/Meting.min.js"></script>
+<script src="/static/js/kaygb@master/js/v3.js"></script>
+<script src="/static/js/jquery.min.js"></script>
+<script src="/static/js/layer.js"></script>
