--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html><html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/><script crossorigin="anonymous" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" src="https://lib.baomitu.com/jquery/1.12.4/jquery.min.js"></script><link rel="stylesheet" href="/static/css/APlayer.min.css"><script src="/static/js/APlayer.min.js"></script><link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"/><title>Sterling Website</title><script src="./config.js"></script><script defer="defer" src="/static/js/main.ace24a8b.js"></script><link href="/static/css/main.e4003dc1.css" rel="stylesheet"></head><body><div id="aplayer" class="aplayer" data-order="random" data-id="2047115431" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="true" data-volume="0.6"></div><div id="app"></div></body></html>
-<script id="music" src="https://music.xingyaox.com/player.js" key="6399cbe9e75044ebab7969d7819744fc"></script>
+<!--<script id="music" src="https://music.xingyaox.com/player.js" key="6399cbe9e75044ebab7969d7819744fc"></script>-->
 <!-- aplayer -->
 <script src="/static/js/Meting.min.js"></script>
 <script src="/static/js/v3.js"></script>
