--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="./config.js"></script>
     <script defer="defer" src="/static/js/main.ace24a8b.js"></script>
     <link href="/static/css/main.e4003dc1.css" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="./css/aplayer.css"/>
+    <link type="text/css" rel="stylesheet" href="./static/css/aplayer.css"/>
   </head>
   <body>
     <!--<div id="aplayer" class="aplayer" data-order="random" data-id="2047115431" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="true" data-volume="0.6"></div>-->
