--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link type="text/css" rel="stylesheet" href="./static/css/aplayer.css"/>
   </head>
   <body>
-    <!--<div id="aplayer" class="aplayer" data-order="random" data-id="2047115431" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="true" data-volume="0.6"></div>-->
+    <div id="aplayer" class="aplayer" data-order="random" data-id="2047115431" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="true" data-volume="0.6"></div>
     <div id="app"></div></body></html>
     <div id="nav-music">
   <div id="nav-music-hoverTips" onclick="anzhiyu.musicToggle()">播放音乐</div>
