--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <link type="text/css" rel="stylesheet" href="./static/css/aplayer.css"/>
   </head>
   <body>
-    <div id="aplayer" class="aplayer" data-order="random" data-id="2047115431" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="true" data-volume="0.6"></div>
-    <div id="app"></div></body></html>
+    <!--<div id="aplayer" class="aplayer" data-order="random" data-id="2047115431" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="true" data-volume="0.6"></div>-->
+    <div id="app"></div>
     <div id="nav-music">
   <div id="nav-music-hoverTips" onclick="anzhiyu.musicToggle()">播放音乐</div>
   <meting-js id="2047115431" server="netease" type="playlist" mutex="true" preload="none" theme="var(--anzhiyu-main)" data-lrctype="0" order="random"></meting-js>
-</div>
+</div></body></html>
 <!--<script id="music" src="https://music.xingyaox.com/player.js" key="6399cbe9e75044ebab7969d7819744fc"></script>-->
 <!-- aplayer -->
 <script src="/static/js/Meting.min.js"></script>
