--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <!--<script id="music" src="https://music.xingyaox.com/player.js" key="6399cbe9e75044ebab7969d7819744fc"></script>-->
 <!-- aplayer -->
 <script src="/static/js/Meting.min.js"></script>
+<script src="/static/js/Meting2.min.js"></script>
 <script src="/static/js/v3.js"></script>
 <script src="/static/js/jquery.min.js"></script>
 <script src="/static/js/layer.js"></script>
